--- a/app/views/catalog/_results.html.erb
+++ b/app/views/catalog/_results.html.erb
@@ -58,10 +58,10 @@
           </tr>
           <tr class="table_header">
             <td class="number_td">&nbsp;</td>
-            <td class="title_td active"><a data-sort="none" href="#"> Title <img id="title_header" src="assets/img/arrow_both.gif"></a></td>
-            <td class="creator_td"><a data-sort="none" href="#">Creator <img id="creator_header" src="assets/img/arrow_both.gif"> </a></td>
+            <td class="title_td active"><a class="sortable_header" data-sort="none" href="#"> Title <img id="title_header" src="assets/img/arrow_both.gif"></a></td>
+            <td class="creator_td"><a class="sortable_header" data-sort="none" href="#">Creator <img id="creator_header" src="assets/img/arrow_both.gif"> </a></td>
 
-            <td class="date_td"><a data-sort="none" href="#">Date <img id="date_header" src="assets/img/arrow_both.gif"></a></td>
+            <td class="date_td"><a class="sortable_header" data-sort="none" href="#">Date <img id="date_header" src="assets/img/arrow_both.gif"></a></td>
             <td class="thumbnail_td" align="left">&nbsp; </td>
           </tr>
           </thead>
