TDLR-379 didn't realize definition lists were used on the object view pages. Created a faq class to distinguish the two kinds of DL/DT/DD

--- a/app/views/about/finding_aids.html.erb
+++ b/app/views/about/finding_aids.html.erb
@@ -13,7 +13,7 @@
 
     <!-- nested Fluid RIGHT -->
     <div class="row">
-      <div class="span7">
+      <div class="span7 faq">
         <h2>Learn More about Finding Aids</h2>
         <p>The Tufts Digital Library contains documents called
         "finding aids" that describe the contents of archival
