For JIRA issue TDLR-368 -- advanced search link in basic search tips text.

--- a/app/views/dca_text/_search_tips.html.erb
+++ b/app/views/dca_text/_search_tips.html.erb
@@ -1,4 +1,4 @@
 <h5>Basic Search Tips</h5> 
 <p>Type some keywords, an author's name, or some other search term in the search box above. You can search for a title or a specific phrase from a document by surrounding it with quotation marks.  Using the facets on the left-hand side of the page, you can filter your results by date, creator, subject, and more.</p>
 <p>Alternately, you can just use the facets to browse without entering any search terms.</p>
-<p><a title="Advanced Search opens" rel="tooltip" href="#">Advanced Search</a></p>
+<p><a title="Advanced Search opens" rel="tooltip" href="/advanced">Advanced Search</a></p>
