--- a/app/views/about/a_new_nation_votes.html.erb
+++ b/app/views/about/a_new_nation_votes.html.erb
@@ -1,3 +1,6 @@
+<%-
+@page_title = "A New Nation Votes: American Election Returns 1787-1825"
+-%>
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -14,7 +17,7 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
-        <h2>A New Nation Votes: American Election Returns 1787-1825</h2>
+        <h2><%= @page_title %></h2>
 
         <p>
 
