--- a/app/views/about/finding_aids.html.erb
+++ b/app/views/about/finding_aids.html.erb
@@ -1,3 +1,7 @@
+<%-
+@page_title = "Learn more about Finding Aids"
+-%>
+
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -14,7 +18,7 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7 faq">
-        <h2>Learn More about Finding Aids</h2>
+        <h2><%= @page_title %></h2>
         <p>The Tufts Digital Library contains documents called
         "finding aids" that describe the contents of archival
         collections in order to assist researchers in
