--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,3 +1,6 @@
+<%-
+@page_title = "About Us"
+-%>
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -15,7 +18,7 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
-          <h2>About Us</h2>
+          <h2><%= @page_title %></h2>
           
           The Tufts Digital Library is the result of a collaboration
           between 
@@ -87,4 +90,4 @@
     </div>
   </div>
 </div>
-</div>
+
