--- a/app/views/about/tufts_local_history.html.erb
+++ b/app/views/about/tufts_local_history.html.erb
@@ -1,3 +1,6 @@
+<%-
+@page_title = "Tufts and Local History"
+-%>
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -14,7 +17,7 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span8">
-        <h2>Tufts and Local History</h2>
+        <h2><%= @page_title %></h2>
 
         <div id="static_thumbnail">
           <ul class="thumbnails ">
@@ -40,7 +43,7 @@
           <li><a href="/catalog/tufts:UA069.001.DO.UA206">The University Photography department</a> has documented Tufts since 2005</li>
           <li><a href="/catalog/tufts:UA069.001.DO.MS054">Edwin B. Rollins’ photographs</a> document buildings on the Medford campus.</li>
           <li><a href="/catalog/tufts:UA069.001.DO.MS002">The P.T. Barnum papers</a> include images of Jumbo and Barnum Hall.</li>
-          <li><a href="/catalog/tufts:UA069.001.DO.MS093>Tom Hart's photographs</a> depict campus and student life in the 60s, 70s and 80s.</li>
+          <li><a href="/catalog/tufts:UA069.001.DO.MS093">Tom Hart's photographs</a> depict campus and student life in the 60s, 70s and 80s.</li>
           <li><a href="/catalog/tufts:UA069.001.DO.UA033">Jackson College photographs</a> portray Jackson College students, activities, and events.</li>
           <li>The <a href="/catalog/tufts:UA069.001.DO.UA046">Department of Athletics papers</a> contains photographs that portray games and athletes.</li>
           <li>The <a href="/catalog/tufts:UA069.001.DO.UA021">Facilities Management papers</a> contains photographs that portray buildings, architectural drawings and construction on the Medford campus.</li>
