--- a/app/views/about/dagomba_dance_drumming.html.erb
+++ b/app/views/about/dagomba_dance_drumming.html.erb
@@ -1,3 +1,6 @@
+<%-
+@page_title = "The Dagomba Dance-Drumming Project"
+-%>
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -14,7 +17,7 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
-        <h2>The Dagomba Dance-Drumming Project</h2>
+        <h2><%= @page_title %></h2>
 
         <p>
 
