--- a/app/views/about/e_scholarship.html.erb
+++ b/app/views/about/e_scholarship.html.erb
@@ -1,3 +1,6 @@
+<%-
+@page_title = "E-scholarship"
+-%>
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -14,7 +17,7 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
-        <h2>E-scholarship</h2>
+        <h2><%= @page_title %></h2>
 
         <p>
 
