--- a/app/views/about/murrow_collection.html.erb
+++ b/app/views/about/murrow_collection.html.erb
@@ -1,3 +1,6 @@
+<%-
+@page_title = "The Edward R. Murrow Papers, ca 1913-1985"
+-%>
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
@@ -14,7 +17,7 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span8">
-        <h2>The Edward R. Murrow Papers, ca 1913-1985</h2>
+        <h2><%= @page_title%></h2>
 
         <p>
 
