--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -1,3 +1,6 @@
+<%-
+@page_title = "Contact DCA"
+-%>
 <!-- LEFT SIDE/ FOR FLUID COLUMN TITLE ROW -->
 <div class="row-fluid">
   <div class="span12">
