Removed unnecessary anchor tag.

--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -79,7 +79,7 @@
         <tr class="table_header">
           <td class="collapse_td">&nbsp;</td>
           <td class="active" valign="bottom">Title</td>
-          <td class="locator_td" valign="bottom"><a href="#"></a></td>
+          <td class="locator_td" valign="bottom">&nbsp;</a></td>
           <td class="id_td" align="left" valign="bottom">&nbsp;</td>
           <td class="availableonline_td" align="center" valign="bottom">Available Online</td>
         </tr>
