Fixed link for "More Questions?" on advanced search page to point to /contact.

--- a/app/views/dca_text/_advanced_search_tips.html.erb
+++ b/app/views/dca_text/_advanced_search_tips.html.erb
@@ -12,4 +12,4 @@
     <pre class="advanced-example">(gay OR lesbian OR transgender) sports</pre>
 
 
-<p><a title="Advanced Search Tips" rel="tooltip" href="#">More Questions?</a></p>
+<p><a title="Advanced Search Tips" rel="tooltip" href="/contact">More Questions?</a></p>
