TDLR-381 put something crediting Hydra/blacklight on the about us pages

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -69,6 +69,10 @@
           the TDL, DCA provides services and support to faculty, staff,
           students, and associated institutions who use the TDL's
           materials or create and contribute content. </p>
+
+	  <h3>Technology</h3>
+
+	  <p>The TDL is built entirely on FLOSS (Free, Libre, and Open Source Software). The underlying data storage is managed with the <a href="http://fedora-commons.org/">Fedora Commons Repository</a>. Our user interface is developed using <a href="http://projectblacklight.org/">Blacklight</a> and  <a href="http://www.fedora-commons.org/confluence/display/hydra/The+Hydra+Project">Hydra</a>, with indexing powered by <a href="http://lucene.apache.org/solr/">Solr</a>.</p> 
       </div>
       <div id="breadcrumbdivider">&nbsp;</div>
 
