--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -65,8 +65,8 @@
       <% if false %>
         <span class="disabled ui-state-active prev_page">« Previous</span> |
       <% end %>
-      <a href="#" class="prev_page">« Previous</a> |
-      <a href="#" class="next_page">Next »</a></div>
+      <a href="#" class="pagination prev_page">« Previous</a> |
+      <a href="#" class="pagination next_page">Next »</a></div>
 
   </div>
 </script>
