--- a/app/views/tufts_faculty_publications/_subnav.html.erb
+++ b/app/views/tufts_faculty_publications/_subnav.html.erb
@@ -1,3 +1,3 @@
-<div class="span6" style="padding-top:5px;">
-  <a href="/file_assets/<%= params[:id] %>"><i class="icon-file"/></i> Download Document</a>
+<div class="span6 pull-right download_links">
+  <a href="/file_assets/<%= params[:id] %>"><i class="icon-file"/></i>&nbsp;Download PDF</a>
 </div>
