--- a/app/views/tufts_audio_texts/_subnav.html.erb
+++ b/app/views/tufts_audio_texts/_subnav.html.erb
@@ -1,3 +1,3 @@
-<div class="span5 pull-right download_links" style="padding-top:5px; padding-left: 25px;  ">
-  <a href="/file_assets/<%= params[:id] %>"><i class="icon-headphones"/></i> Download Audio File</a> &nbsp;<a href="/file_assets/transcript/<%= params[:id] %>"><i class="icon-file"/></i> Download Transcript</a>
+<div class="span6 pull-right download_links">
+  <a href="/file_assets/<%= params[:id] %>"><i class="icon-headphones"/></i>&nbsp;Download Audio File</a>&nbsp;&nbsp;<a href="/file_assets/transcript/<%= params[:id] %>">&nbsp;<i class="icon-file"/></i>&nbsp;Download Transcript</a>
 </div>
