--- a/app/views/tufts_wps/_subnav.html.erb
+++ b/app/views/tufts_wps/_subnav.html.erb
@@ -1,3 +1,3 @@
-<div class="span5 download_links pull-right" style="padding-top:5px;  padding-left: 25px;  ">
-  Download: <a href="/file_assets/<%= params[:id] %>"><i class="icon-picture"/></i> Download image</a> <a href="http://sites.tufts.edu/dca/research-help/image-requests/"><i class="icon-envelope"/></i> Request high-resolution</a>
+<div class="span6 pull-right download_links">
+  <a href="/file_assets/<%= params[:id] %>"><i class="icon-picture"/></i>&nbsp;Download Image</a>&nbsp;&nbsp;<a href="http://sites.tufts.edu/dca/research-help/image-requests/"><i class="icon-envelope"/></i>&nbsp;Request High-resolution</a>
 </div>
