--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -41,8 +41,10 @@
 
 <script id="gallery_overlay_template" type="text/template">
   <div class="modal-header">
-    <h3>{{title}}</h3>
-    <button class="close" data-dismiss="modal">&times;</button>
+    <span class="title_container">
+    <h3 class="dialog_title">{{title}}</h3>
+    <button class="close_button" data-dismiss="modal">&times;</button>
+    </span>
   </div>
   <div class="modal-body">
     <ul class="thumbnails  ">
