more layout for gallery

--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -50,7 +50,7 @@
     <ul class="thumbnails  ">
       {{#figures}}
       <li class="span2 thumb_item">
-        <div class="thumbnail">
+        <div class="thumbnail thumbnail_with_caption">
           <a href="#"><img src="/file_assets/thumb/{{pid}}" alt="{{caption}}"></a>
 
           <div class="caption_oneline ">
