--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -135,7 +135,7 @@
   <div class="modal fade modal_650wide" id="myImageOverlay"></div>
   <!-Image Gallery Modal-->
 
-  <div class="modal fade modal_800wide" id="myImageGallery"></div>
+  <div class="modal modal_fixed_height fade modal_800wide" id="myImageGallery"></div>
   <!-End Gallery Modal -->
 </div>
 <!-- /container -->
