--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -132,10 +132,10 @@
 
   <!-Image Overlay Modal-->
 
-  <div class="modal fade modal_650wide" id="myImageOverlay"></div>
+  <div class="modal fade modal_650wide modal-level2" tabindex="-1" id="myImageOverlay"></div>
   <!-Image Gallery Modal-->
 
-  <div class="modal modal_fixed_height fade modal_800wide" id="myImageGallery"></div>
+  <div class="modal modal_fixed_height fade modal_800wide modal-level1" tabindex="-1" id="myImageGallery"></div>
   <!-End Gallery Modal -->
 </div>
 <!-- /container -->
