--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -63,7 +63,7 @@
           <a data-pid="{{pid}}" href="#myImageOverlay" class="thumbnail" ><img src="/file_assets/thumb/{{pid}}" alt="{{caption}}"></a>
 
           <div class="caption_oneline ">
-            <a rel="tooltip" data-placement="top" data-original-title="{{full_title}}" data-pid="{{pid}}" href="#myImageOverlay" class="gallery_thumbnail">{{caption}}</a>
+            <a rel="tooltip" data-placement="bottom" data-original-title="{{full_title}}" data-pid="{{pid}}" href="#myImageOverlay" class="gallery_thumbnail">{{caption}}</a>
 
           </div>
         </div>
