--- a/app/views/tufts_teis/_show.html.erb
+++ b/app/views/tufts_teis/_show.html.erb
@@ -1,6 +1,9 @@
 <!-- LEFT SIDE FOR OBJECT TITLE -->
 <% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
 <% toc_results, chapter_list =  Tufts::TeiMethods.get_toc(@document_fedora) %>
+<% stylesheet_links << "tei/tei.css" %>
+<% javascript_includes << "mustache/mustache.js" %>
+<% javascript_includes << "tei/tei.js" %>
 
 <div class="row">
   <div class="span12">
@@ -24,5 +27,6 @@
 
 
 </div>
+<%= render :partial => 'tufts_teis/mustache_templates' %>
 
 
