TDLR-396 removing beta text

--- a/app/views/dca_text/_welcome.html.erb
+++ b/app/views/dca_text/_welcome.html.erb
@@ -1,8 +1,4 @@
 <div class="span7">
-<h2>Welcome to the <strong>BETA</strong> digital library!</h2>
+<h2>Welcome to the digital library!</h2>
   <p> The Tufts Digital Library is a place to explore and discover Tufts' research and teaching online. Collections include faculty and student scholarship, photograph and image collections, oral histories, student and university publications, and more. Explore using the links below.</p>
-  <p>This reimagining of the TDL user interface is <strong>currently in
-  beta</strong>. Only some of the content is functional; images should
-  work correctly, and other media types should become functional
-  over the coming weeks. We welcome your <a href="/contact">feedback and comments</a>.</p>
 </div>
