--- a/app/views/about/wriston_collection.html.erb
+++ b/app/views/about/wriston_collection.html.erb
@@ -25,7 +25,7 @@
           <ul class="thumbnails ">
             <li class="span3">
               <div class="thumbnail">
-                <a href="http://preview-dl.lib.tufts.edu/catalog/tufts:MS134.006.035.00004"><img src="http://preview-dl.lib.tufts.edu/file_assets/tufts:MS134.006.035.00004" alt="Walter B. Wriston seated in lawn chair, 1938"></a>
+                <a href="/catalog/tufts:MS134.006.035.00004"><img src="/file_assets/tufts:MS134.006.035.00004" alt="Walter B. Wriston seated in lawn chair, 1938"></a>
 
               </div>
             </li>
