--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -54,7 +54,7 @@
           
         <div id="static_thumbnail">
            <div>
-              <a href="http://preview-dl.lib.tufts.edu/catalog/tufts:UA009.011.029.00009"><img src="http://preview-dl.lib.tufts.edu/file_assets/tufts:UA009.011.029.00009" alt="Boy Writing, Eliot-Pearson Department of Child Development" width="250px"></a>
+              <a href="/catalog/tufts:UA009.011.029.00009"><img src="/file_assets/tufts:UA009.011.029.00009" alt="Boy Writing, Eliot-Pearson Department of Child Development" width="250px"></a>
            </div>
         </div>
 
