TDLR-410 spot fixes -- broken URLs, typo

--- a/app/views/about/finding_aids.html.erb
+++ b/app/views/about/finding_aids.html.erb
@@ -87,7 +87,7 @@
             Although this section contains the actual inventory
             to the contents of the collection, it is important to
             read the front matter, too--especially the Historical
-            Note, Content Description, and Arrangement-to
+            Note, Content Description, and Arrangement--to
             understand the context of the items.</dd>
           </dl>
       </div>
