--- a/app/views/catalog/_index_partials/_default.html.erb
+++ b/app/views/catalog/_index_partials/_default.html.erb
@@ -2,7 +2,9 @@
   <td class="number_td"><%= @result_no += 1 %></td>
   <td class="title_td">
     <span class="table_title">
-      <%= link_to document[:title_t][0], "/catalog/" + document[:id] %>
+    <% unless document[:title_t].nil? %>
+     <%= link_to document[:title_t][0], "/catalog/" + document[:id]  %>
+    <% end %>
     </span>
   </td>
   <td class="creator_td">
