more inconsistency handling

--- a/app/views/catalog/_index_partials/_default.html.erb
+++ b/app/views/catalog/_index_partials/_default.html.erb
@@ -40,7 +40,7 @@
     <%#= valid_date.strftime("%b %d, %Y")  %>
     <%= valid_date_string  %>
   </td>
-  <% if document[:type2_t].first == 'image' %>
+  <% if !document[:type2_t].nil? && document[:type2_t].first == 'image' %>
       <td class="thumbnail_td" align="center">
         <ul class="thumbnails">
           <li class="nothumbnailmargin">
