--- a/app/views/catalog/_index_partials/_default.html.erb
+++ b/app/views/catalog/_index_partials/_default.html.erb
@@ -16,29 +16,13 @@
   </td>
   <td class="date_td">
     <%
-       date = document[:temporal_t]
-       valid_date = Time.new
-
-       unless date.nil?
-         if date[0].length() == 4
-          date[0] += "-01-01"
-         end
-
-         unparsed_date =Chronic.parse(date[0])
-
-         unless unparsed_date.nil?
-            valid_date = Time.at(unparsed_date)
-         end
-
+       date = document[:pub_date_i]
+       if date.nil?
+         date = ""
        end
-       valid_date_string = ""
-       unless date.nil?
-         valid_date_string = valid_date.strftime("%Y")
-       end
-
     %>
     <%#= valid_date.strftime("%b %d, %Y")  %>
-    <%= valid_date_string  %>
+    <%= date  %>
   </td>
   <% if !document[:type2_t].nil? && document[:type2_t].first == 'image' %>
       <td class="thumbnail_td" align="center">
