TDLR-433 incorrect feedback email address

--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -49,7 +49,7 @@
           Tisch Library Building<br />
           35 Professors Row<br />
           Medford, MA 02155<br />
-          dl_feedback&#x0040;tufts.edu<br />
+          dl_feedback&#x0040;elist.tufts.edu<br />
           Phone: 617.627.3737</p>
           
         <div id="static_thumbnail">
