--- a/app/views/notifier/pngizer_failure.text.erb
+++ b/app/views/notifier/pngizer_failure.text.erb
@@ -1,8 +1,7 @@
 The daemon pngizerd has experienced an error<%= @params[:pid] != nil ? ' for ' + @params[:pid] : '' %>.
 
-The error may be unrecoverable causing pngizerd to fail for all subsequent ingests of objects with pdfs, but this is the only email that will be sent so you should investigate the problem now.
+pngizerd will attempt to recover from the error.
 
 Please see tdl_hydra_head/log/pngizer.log on stage-dl.lib.tufts.edu for details.
 
-Please restart pngizer on stage-dl.lib.tufts.edu as hydradm using tdl_hydra_head/utils/restart_pngizerd.sh.  This is usually all that you will have to do;  pngizerd will re-run for all objects that failed.
-
+If the log doesn't show that pngizerd restarted automatically, please restart pngizerd on stage-dl.lib.tufts.edu as hydradm using tdl_hydra_head/utils/restart_pngizerd.sh.  This is usually all that you will have to do;  pngizerd will re-run for all objects that failed.
